# mathspot

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: MathSpot.h
include/mathspot/: Math.h
include/spot/math/: mat4.h  math.h  shape.h
src/: Math.cpp  MathSpot.cpp  math.cc  shape.cc
test/: CMakeLists.txt  mat4-test.cc  mat4-test.cpp  misc-test.cc  misc-test.cpp  quat-test.cc  rect-test.cc  rectangle-test.cc  rectangle-test.cpp  size-test.cc  size-test.cpp  test.h  vec2-test.cc  vec2-test.cpp  vec3-test.cc  vec3-test.cpp
